[project]
name = "aury-sdk-storage"
version = "0.1.0"
description = "Multi-cloud storage SDK with STS support (AWS, Aliyun OSS, Tencent COS)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "aioboto3>=15.5.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"


[project.optional-dependencies]
aws = ["aioboto3>=13.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aury"]

[tool.hatch.build.targets.sdist]
include = [
    "/aury",
    "/README.md",
]
exclude = [
    "/.git",
    "/.gitignore",
    "/pypi_key",
    "/release.sh",
    "/test_manual.py",
    "/dist",
    "/build",
]
